# Mayday

./: .gitignore  CMakeLists.txt  Configure.bat  Configure.sh  README.md
sources/: certs.h  config.h  inputparams.h  main.cpp  tcpsocket.cpp  tcpsocket.h
